--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectName=OneAppBolivia
-sonar.projectKey=OneAppBolivia
+sonar.projectName=ci-cd-github
+sonar.projectKey=ci-cd-github
 sonar.sources=./web/modules/custom/
 sonar.baseBranch=master
 sonar.scanAllSources=false
